--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <script data-main="./main.js" src="./lib/requirejs.js"></script>
+    <div>
+      <script data-main="./main.js" src="./lib/requirejs.js"></script>
+    </div>
   </body>
 </html>
