--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div>
+    <canvas id="game" class="game">
       <script data-main="./main.js" src="./lib/requirejs.js"></script>
-    </div>
+    </canvas>
   </body>
 </html>
